assets/css/style.css
/* General styles -------*/

* {
    margin: 0;
    padding: 0;
    border: 0;
}

body {
    font-family: 'Syne Mono', monospace;
    background-color: #fafafa;
}

h1 {
    margin-top: 5rem;
    margin-left: 20%;
    padding-bottom: 1rem;
    font-size: 3.5rem;
    text-decoration: underline;
}

h2 {
    font-size: 175%;
}

h3 {
    text-decoration: underline;
}


/* Navigation bar -------*/

nav {
    background-color: rgb(253, 253, 253);
    font-size: 117%;
}

#navigation-links {
    position: relative;
    left: 7%;
}

.navbar-light .navbar-nav .nav-link:hover {
    color: #D85656;
    transition: 0.5s;
}

.navbar-light .navbar-nav .nav-link:active {
    color: black;
}

.navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
    color: #D85656;
}

button.navbar-toggler.ml-auto, button.navbar-toggler.ml-auto.collapsed {
    border: none;
    outline: none;
}

/* Footer -------*/

footer {
    height: 150px;
    background-color: black;
    text-align: center;
}

footer a {
    color: rgb(253, 253, 253);
}

footer a:hover {
    text-decoration: none;
    color: rgba(247, 246, 245, 0.5);
    transition: 0.4s;
}

#footer-heading {
    padding: 2rem 0.75rem 1rem 0;
    font-size: 175%;
}

ul#footer-social {
    padding-right: 1rem;
}

#footer-social li {
    display: inline;
    font-size: 1.5rem;
}

#footer-social i {
    font-size: 120%;
    padding: 0.5rem;
}

/* index.html --------*/

/* Hero image*/

#hero-image {
    height: 670px;
    width: 100%;
    background: url(../images/hero-placeholder.jpg) no-repeat center center;
    background-size: 100%;
    margin-top: 57px;
    margin-bottom: 45px;
}

#hero-outer {
    position: relative;
}

/* Calls to action */

.cta {
    text-align: center;
    height: 200px;
    margin-top: 1rem;
    margin-bottom: 2rem;
    border: solid #545454;
    border-radius: 45px;
    box-shadow: 4px 2px 4px #ccc;
    background-color: #f2f0f0;
}

/* box shadow advice researched from https://css-tricks.com/almanac/properties/b/box-shadow/ */

.cta-content {
    padding-top: 40px;
    padding-right: 15%;
    padding-left: 15%;
}

a.btn.btn-primary.btn-lg {
    background-color: #D85656;
    border: none;
    margin-top: 10px;
}

a.btn.btn-primary.btn-lg:hover {
    background-color: black;
    color: #fafafa;
    transition: 0.7s;
}

a.btn.btn-primary.btn-lg:active {
    background-color: #fafafa;
    color: black;
    border: 1px solid grey;
}

#cta-section {
    margin-bottom: 2.5rem;
}

/* Tour dates */

h3#tour-header {
    margin-bottom: 2rem;
    padding-top: 2rem;
    font-size: 250%;
    text-decoration: underline;
    font-weight: 800;
    position: relative;
    left: 9%;
}

#tour-dates {
    font-family: 'JetBrains Mono', monospace;
}

#tour-dates p {
    font-size: 30px;
}

.venue {
    color: #D85656;
}

/* music.html --------*/

.music-content {
    margin-top: 1rem;
    margin-bottom: 2rem;
}

#youtube-iframe {
    height: 400px;
    width: 100%;
}

#soundcloud-iframe {
    width: 100%;
    height: 300px;
}

#new-ep {
    background: url(../images/hero-placeholder.jpg) no-repeat center center;
}

/* contact.html -------*/

label {
    font-size: 125%;
    padding-top: 5px;
}

form > h3 {
    font-size: 150%;
    padding-bottom: 10px;
    font-family: 'JetBrains Mono', monospace;
}

h3 ~ p {
    font-size: 170%;
}

#contact-info-outer {
    max-width: 800px;
    height: 400px;
}

#contact-info-content {
    padding-top: 20px;
}

#email-form {
    margin-top: 2rem;
    margin-bottom: 2.5rem;
    max-width: 500px;
    padding: 30px;
    height: 350px;
}

/* gallery.html -------*/

#photo {
    clear: both;
    line-height: 0;
    column-count: 4;
    column-gap: 0px;
}

#photo img {
    width: 100%;
}

/* about.html -------*/

#about-image {
    width: 70%;
    height: 16rem;
}

/* animations -------- */

.appear-first {
    opacity: 0;

    animation-name: appear-first; 
    animation-duration: 2s;
    animation-delay: 0.75s;
    animation-fill-mode: forwards;
}

/* animation learnt from https://www.youtube.com/watch?v=zHUpx90NerM&ab_channel=TraversyMedia at around 33 minutes */
@keyframes appear-first {
    0% {opacity: 0}
    100% {opacity: 1}
}

.appear-second {
    opacity: 0;

    animation-name: appear-second; 
    animation-duration: 2s;
    animation-delay: 2s;
    animation-fill-mode: forwards; 
}

/* animation learnt from https://www.youtube.com/watch?v=zHUpx90NerM&ab_channel=TraversyMedia at around 33 minutes */
@keyframes appear-second {
    0% {opacity: 0}
    100% {opacity: 1}
}

/* media queries ------- */

@media screen and (max-width: 1024px) {
    #hero-image {
        height: 430px;
    }
}

@media screen and (max-width: 953px) {

    #navigation-links {
        position: relative;
        left: 3%;
    }

}

@media screen and (max-width: 825px) {

    #navigation-links {
        position: relative;
        left: 1%;
    }

}

@media screen and (max-width: 767px) {

    .cta {
        margin-top: 0.5rem;
        margin-bottom: 1rem;
    }

    #cta-section {
        max-width: 80%;
    }

    #navigation-links {
        position: relative;
        left: 40%;
    }

    #social-links {
        position: relative;
        left: 38%;
    }

    #navigation-links, #social-links {
        font-size: 200%;
    }

    #hero-image {
        margin-bottom: 20px;
    }

    h3 ~ p {
        font-size: 125%;
    }


}

@media screen and (max-width: 649px) {
    #hero-image {
        height: 250px;
        margin-bottom: 0.5rem;
    }

}

@media screen and (max-width: 500px) {
     #navigation-links {
        position: relative;
        left: 33%;
    }

    #social-links {
        position: relative;
        left: 28%;
    }

    h3 ~ p {
        font-size: 1rem;
    }
}

@media screen and (max-width: 392px) {
     #navigation-links {
        position: relative;
        left: 31%;
    }

    #social-links {
        position: relative;
        left: 22%;
    }

    h3 ~ p {
        font-size: 80%;
    }
}

